// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Import Tests | buildImportItems 1`] = `
Array [
  Object {
    "absImportPath": "absRoot/src1/file2.js",
    "description": "src1/file2",
    "exportType": 1,
    "isExtraImport": undefined,
    "label": "src1_file2_1",
  },
  Object {
    "absImportPath": "absRoot/src1/file2.js",
    "description": "src1/file2",
    "exportType": 1,
    "isExtraImport": undefined,
    "label": "src1_file2_2",
  },
  Object {
    "absImportPath": "absRoot/src1/file2.js",
    "description": "src1/file2",
    "exportType": 1,
    "isExtraImport": undefined,
    "label": "src1_file2_3",
  },
  Object {
    "absImportPath": "absRoot/src1/file2.js",
    "description": "src1/file2",
    "exportType": 1,
    "isExtraImport": undefined,
    "label": "src1_file2_4",
  },
  Object {
    "absImportPath": "absRoot/src1/file2.js",
    "description": "src1/file2",
    "exportType": 1,
    "isExtraImport": undefined,
    "label": "src1_file2_5",
  },
  Object {
    "absImportPath": "absRoot/src1/file2.js",
    "description": "src1/file2",
    "exportType": 1,
    "isExtraImport": undefined,
    "label": "src1_file2_t_1",
  },
  Object {
    "absImportPath": "absRoot/src1/file2.js",
    "description": "src1/file2",
    "exportType": 1,
    "isExtraImport": undefined,
    "label": "src1_file2_t_2",
  },
  Object {
    "absImportPath": "absRoot/module1",
    "description": "module1",
    "exportType": 0,
    "isExtraImport": true,
    "label": "defaultModule1",
  },
  Object {
    "absImportPath": "absRoot/module1_file2",
    "description": "module1_file2",
    "exportType": 0,
    "isExtraImport": true,
    "label": "defaultModule_file2",
  },
  Object {
    "absImportPath": "absRoot/module2",
    "description": "module2",
    "exportType": 1,
    "isExtraImport": true,
    "label": "module2_1",
  },
  Object {
    "absImportPath": "absRoot/module2",
    "description": "module2",
    "exportType": 1,
    "isExtraImport": true,
    "label": "module2_2",
  },
  Object {
    "absImportPath": "absRoot/module2",
    "description": "module2",
    "exportType": 1,
    "isExtraImport": true,
    "label": "module2_3",
  },
  Object {
    "absImportPath": "absRoot/module2",
    "description": "module2",
    "exportType": 1,
    "isExtraImport": true,
    "label": "module2_src2_1",
  },
  Object {
    "absImportPath": "absRoot/module2",
    "description": "module2",
    "exportType": 2,
    "isExtraImport": true,
    "label": "module2_t_1",
  },
  Object {
    "absImportPath": "absRoot/src1/file3.js",
    "description": "src1/file3",
    "exportType": 0,
    "isExtraImport": undefined,
    "label": "file3",
  },
  Object {
    "absImportPath": "absRoot/src1/subdir/file1.js",
    "description": "src1/subdir/file1",
    "exportType": 1,
    "isExtraImport": undefined,
    "label": "src1_subdir_file1_1",
  },
  Object {
    "absImportPath": "absRoot/src2/file1.js",
    "description": "src2/file1",
    "exportType": 1,
    "isExtraImport": undefined,
    "label": "src2_file1_1",
  },
]
`;

exports[`Import Tests | import - comment with code right after 1`] = `
"Snapshot Diff:
- Without Content
+ With Content

@@ --- --- @@
+ // I'm a comment
  const defaultModule1 = require('module1')
  const defaultModule_file2 = require('module1_file2')
@@ --- --- @@
  const file3 = require('./file3')
  const { src1_subdir_file1_1 } = require('./subdir/file1')
+ 
+ const foo = 1
  "
`;

exports[`Import Tests | import - comment with linebreak and code 1`] = `
"Snapshot Diff:
- Without Content
+ With Content

@@ --- --- @@
+ // I'm a comment
  const defaultModule1 = require('module1')
  const defaultModule_file2 = require('module1_file2')
@@ --- --- @@
  const file3 = require('./file3')
  const { src1_subdir_file1_1 } = require('./subdir/file1')
+ 
+ const foo = 1
  "
`;

exports[`Import Tests | import - empty - original order 1`] = `
"const defaultModule1 = require('module1')
const defaultModule_file2 = require('module1_file2')
const { module2_1, module2_2, module2_3, module2_src2_1, type module2_t_1 } = require('module2')
const { src2_file1_1 } = require('../src2/file1')
const { src1_file2_1, src1_file2_2, src1_file2_3, src1_file2_4, src1_file2_5, src1_file2_t_1,
  src1_file2_t_2 } = require('./file2')
const file3 = require('./file3')
const { src1_subdir_file1_1 } = require('./subdir/file1')
"
`;

exports[`Import Tests | import - has code 1`] = `
"Snapshot Diff:
- Without Content
+ With Content

@@ --- --- @@
  const { src1_subdir_file1_1 } = require('./subdir/file1')
  
+ const foo = 1
+ "
`;

exports[`Import Tests | import - importGroups 1`] = `
"const { module2_1, module2_2, module2_3, module2_src2_1, type module2_t_1 } = require('module2')
const defaultModule1 = require('module1')
const defaultModule_file2 = require('module1_file2')
const { src2_file1_1 } = require('../src2/file1')
const { src1_file2_1, src1_file2_2, src1_file2_3, src1_file2_4, src1_file2_5, src1_file2_t_1,
  src1_file2_t_2 } = require('./file2')
const file3 = require('./file3')
const { src1_subdir_file1_1 } = require('./subdir/file1')
"
`;

exports[`Import Tests | import - maxImportLineLength 1`] = `
"const defaultModule1 = require('module1')
const defaultModule_file2 = require('module1_file2')
const { module2_1, module2_2, module2_3,
  module2_src2_1, type module2_t_1
} = require('module2')
const { src2_file1_1
} = require('../src2/file1')
const { src1_file2_1, src1_file2_2,
  src1_file2_3, src1_file2_4, src1_file2_5,
  src1_file2_t_1, src1_file2_t_2
} = require('./file2')
const file3 = require('./file3')
const { src1_subdir_file1_1
} = require('./subdir/file1')
"
`;

exports[`Import Tests | import - multiline comment 1`] = `
"Snapshot Diff:
- Without Content
+ With Content

@@ --- --- @@
+ /*
+ I'm a comment
+ With multiple lines
+ */
  const defaultModule1 = require('module1')
  const defaultModule_file2 = require('module1_file2')"
`;

exports[`Import Tests | import - multilineImportStyle = single 1`] = `
"const defaultModule1 = require('module1')
const defaultModule_file2 = require('module1_file2')
const { module2_1, module2_2, module2_3, module2_src2_1, type module2_t_1 } = require('module2')
const { src2_file1_1 } = require('../src2/file1')
const {
  src1_file2_1,
  src1_file2_2,
  src1_file2_3,
  src1_file2_4,
  src1_file2_5,
  src1_file2_t_1,
  src1_file2_t_2,
} = require('./file2')
const file3 = require('./file3')
const { src1_subdir_file1_1 } = require('./subdir/file1')
"
`;

exports[`Import Tests | import - nonModulePaths 1`] = `
"const defaultModule1 = require('module1')
const defaultModule_file2 = require('module1_file2')
const { module2_1, module2_2, module2_3, module2_src2_1, type module2_t_1 } = require('module2')
const { src1_file2_1, src1_file2_2, src1_file2_3, src1_file2_4, src1_file2_5, src1_file2_t_1,
  src1_file2_t_2 } = require('file2')
const file3 = require('file3')
const { src2_file1_1 } = require('../src2/file1')
const { src1_subdir_file1_1 } = require('./subdir/file1')
"
`;

exports[`Import Tests | import - padCurlyBraces = false 1`] = `
"const defaultModule1 = require('module1')
const defaultModule_file2 = require('module1_file2')
const {module2_1, module2_2, module2_3, module2_src2_1, type module2_t_1} = require('module2')
const {src2_file1_1} = require('../src2/file1')
const {src1_file2_1, src1_file2_2, src1_file2_3, src1_file2_4, src1_file2_5, src1_file2_t_1,
  src1_file2_t_2} = require('./file2')
const file3 = require('./file3')
const {src1_subdir_file1_1} = require('./subdir/file1')
"
`;

exports[`Import Tests | import - processImportPath 1`] = `
"const defaultModule1 = require('module1')
const defaultModule_file2 = require('module1_file2')
const { module2_1, module2_2, module2_3, module2_src2_1, type module2_t_1 } = require('module2')
const { src2_file1_1 } = require('../src2/FILE1')
const { src1_file2_1, src1_file2_2, src1_file2_3, src1_file2_4, src1_file2_5, src1_file2_t_1,
  src1_file2_t_2 } = require('./file2')
const file3 = require('./file3')
const { src1_subdir_file1_1 } = require('./subdir/FILE1')
"
`;

exports[`Import Tests | import - processImportPath 2`] = `
Array [
  "./file2.js",
  "absRoot/src1/file2.js",
  "absRoot/src1/file1.js",
  "absRoot",
]
`;

exports[`Import Tests | import - shouldIncludeImport 1`] = `
"const { src2_file1_1 } = require('../src2/file1')
const { src1_subdir_file1_1 } = require('./subdir/file1')
"
`;

exports[`Import Tests | import - shouldIncludeImport 2`] = `
Array [
  "absRoot/src2/file1.js",
  "absRoot/src1/file1.js",
]
`;

exports[`Import Tests | import - single line comment 1`] = `
"Snapshot Diff:
- Without Content
+ With Content

@@ --- --- @@
+ // I'm a comment
  const defaultModule1 = require('module1')
  const defaultModule_file2 = require('module1_file2')"
`;

exports[`Import Tests | import - src1/subdir/file1.js - original order 1`] = `
"const defaultModule1 = require('module1')
const defaultModule_file2 = require('module1_file2')
const { module2_1, module2_2, module2_3, module2_src2_1, type module2_t_1 } = require('module2')
const { src2_file1_1 } = require('../../src2/file1')
const { src1_file1_1, src1_file1_2, src1_file1_3, src1_file1_4, src1_file1_5, src1_file1_other1,
  src1_file1_other2, src1_file1_t_1, src1_file1_t_2 } = require('../file1')
const { src1_file2_1, src1_file2_2, src1_file2_3, src1_file2_4, src1_file2_5, src1_file2_t_1,
  src1_file2_t_2 } = require('../file2')
const file3 = require('../file3')
"
`;

exports[`Import Tests | import - src2/file1.js - original order 1`] = `
"const defaultModule1 = require('module1')
const defaultModule_file2 = require('module1_file2')
const { module2_1, module2_2, module2_3, module2_src2_1, type module2_t_1 } = require('module2')
const { src1_file1_1, src1_file1_2, src1_file1_3, src1_file1_4, src1_file1_5, src1_file1_other1,
  src1_file1_other2, src1_file1_t_1, src1_file1_t_2 } = require('../src1/file1')
const { src1_file2_1, src1_file2_2, src1_file2_3, src1_file2_4, src1_file2_5, src1_file2_t_1,
  src1_file2_t_2 } = require('../src1/file2')
const file3 = require('../src1/file3')
const { src1_subdir_file1_1 } = require('../src1/subdir/file1')
"
`;

exports[`Import Tests | import - trailingComma = false 1`] = `
"const defaultModule1 = require('module1')
const defaultModule_file2 = require('module1_file2')
const { module2_1, module2_2, module2_3, module2_src2_1, type module2_t_1 } = require('module2')
const { src2_file1_1 } = require('../src2/file1')
const {
  src1_file2_1,
  src1_file2_2,
  src1_file2_3,
  src1_file2_4,
  src1_file2_5,
  src1_file2_t_1,
  src1_file2_t_2
} = require('./file2')
const file3 = require('./file3')
const { src1_subdir_file1_1 } = require('./subdir/file1')
"
`;

exports[`Import Tests | import - useSemicolons = false 1`] = `
"const defaultModule1 = require('module1')
const defaultModule_file2 = require('module1_file2')
const { module2_1, module2_2, module2_3, module2_src2_1, type module2_t_1 } = require('module2')
const { src2_file1_1 } = require('../src2/file1')
const { src1_file2_1, src1_file2_2, src1_file2_3, src1_file2_4, src1_file2_5, src1_file2_t_1,
  src1_file2_t_2 } = require('./file2')
const file3 = require('./file3')
const { src1_subdir_file1_1 } = require('./subdir/file1')
"
`;

exports[`Import Tests | import - useSingleQuotes = false 1`] = `
"const defaultModule1 = require(\\"module1\\")
const defaultModule_file2 = require(\\"module1_file2\\")
const { module2_1, module2_2, module2_3, module2_src2_1, type module2_t_1 } = require(\\"module2\\")
const { src2_file1_1 } = require(\\"../src2/file1\\")
const { src1_file2_1, src1_file2_2, src1_file2_3, src1_file2_4, src1_file2_5, src1_file2_t_1,
  src1_file2_t_2 } = require(\\"./file2\\")
const file3 = require(\\"./file3\\")
const { src1_subdir_file1_1 } = require(\\"./subdir/file1\\")
"
`;
